feat(server): add + get meetings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,11 @@
 {
   "recommendations": [
-    
     "nrwl.angular-console",
-    "esbenp.prettier-vscode"
+    "firsttris.vscode-jest-runner",
+    "dbaeumer.vscode-eslint",
+    "github.vscode-pull-request-github",
+    "eamodio.gitlens",
+    "oderwat.indent-rainbow",
+    "pkief.material-icon-theme"
   ]
 }
