--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
+    "dotenv-flow": "^3.2.0",
     "express": "4.17.2",
     "jsonwebtoken": "8.5.1",
     "tslib": "^2.0.0"
@@ -19,19 +21,23 @@
     "@nrwl/linter": "13.8.3",
     "@nrwl/node": "13.8.3",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "13.8.3",
     "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
-    "eslint": "~8.7.0",
-    "eslint-config-prettier": "8.1.0",
-    "jest": "27.2.3",
+    "@typescript-eslint/eslint-plugin": "~5.12.1",
+    "@typescript-eslint/parser": "~5.12.1",
+    "eslint": "~8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "26.1.1",
+    "jest": "27.5.1",
     "prettier": "^2.5.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.5.2"
+    "ts-jest": "27.1.3",
+    "typescript": "~4.5.5"
   }
 }
