fix(create meetings): now truly able to create meetings

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
+    "body-parser": "1.19.2",
     "dotenv": "^16.0.0",
     "dotenv-flow": "^3.2.0",
     "express": "4.17.2",
@@ -24,6 +25,7 @@
     "@nrwl/react": "13.8.3",
     "@nrwl/tao": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@types/body-parser": "1.19.2",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
