--- a/packages/server/project.json
+++ b/packages/server/project.json
@@ -16,13 +16,7 @@
         "production": {
           "optimization": true,
           "extractLicenses": true,
-          "inspect": false,
-          "fileReplacements": [
-            {
-              "replace": "packages/server/src/environments/environment.ts",
-              "with": "packages/server/src/environments/environment.prod.ts"
-            }
-          ]
+          "inspect": false
         }
       }
     },
