feat(meeting): displaying meetings in the front

--- a/nx.json
+++ b/nx.json
@@ -16,5 +16,21 @@
       }
     }
   },
-  "defaultProject": "server"
+  "defaultProject": "server",
+  "generators": {
+    "@nrwl/react": {
+      "application": {
+        "style": "css",
+        "linter": "eslint",
+        "babel": true
+      },
+      "component": {
+        "style": "css"
+      },
+      "library": {
+        "style": "css",
+        "linter": "eslint"
+      }
+    }
+  }
 }
