--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
   "name": "fleex",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "dev:back": "nx serve server",
+    "dev:front": "nx serve front",
+    "dev": "nx run-many --target=serve --projects=server,front"
+  },
   "private": true,
   "dependencies": {
     "axios": "^0.26.0",
     "body-parser": "1.19.2",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "date-fns": "2.28.0",
     "dotenv": "^16.0.0",
     "dotenv-flow": "^3.2.0",
     "express": "4.17.2",
     "jsonwebtoken": "8.5.1",
+    "react": "17.0.2",
+    "react-big-calendar": "^0.24.1",
+    "react-dom": "17.0.2",
+    "react-router-dom": "5.3.0",
+    "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@nrwl/cli": "13.8.3",
+    "@nrwl/cypress": "13.8.3",
     "@nrwl/eslint-plugin-nx": "13.8.3",
     "@nrwl/express": "^13.8.3",
     "@nrwl/jest": "13.8.3",
@@ -24,22 +38,46 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "13.8.3",
     "@nrwl/tao": "13.8.3",
+    "@nrwl/web": "13.8.3",
     "@nrwl/workspace": "13.8.3",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
     "@types/body-parser": "1.19.2",
+    "@types/cors": "2.8.12",
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "8.5.8",
     "@types/node": "16.11.7",
+    "@types/react": "17.0.30",
+    "@types/react-big-calendar": "0.36.2",
+    "@types/react-dom": "17.0.9",
+    "@types/react-router-dom": "5.3.1",
     "@typescript-eslint/eslint-plugin": "~5.12.1",
     "@typescript-eslint/parser": "~5.12.1",
+    "babel-jest": "27.2.3",
+    "cypress": "^9.1.0",
     "eslint": "~8.10.0",
     "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "26.1.1",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.27.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "jest": "27.5.1",
     "prettier": "^2.5.1",
+    "react-test-renderer": "17.0.2",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.5"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead"
+    ],
+    "development": [
+      "last 1 chrome version"
+    ]
   }
 }
