--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-big-calendar": "^0.24.1",
     "react-dom": "17.0.2",
     "react-router-dom": "5.3.0",
+    "reactjs-popup": "2.0.5",
     "regenerator-runtime": "0.13.7",
     "tslib": "^2.0.0"
   },
