--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-big-calendar": "^0.24.1",
     "react-dom": "17.0.2",
+    "react-notifications-component": "^3.4.1",
     "react-router-dom": "5.3.0",
     "reactjs-popup": "2.0.5",
     "regenerator-runtime": "0.13.7",
