--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,7 +60,23 @@
             }
           ],
           "pathGroupsExcludedImportTypes": ["builtin"]
-        }]
+        }],
+        "key-spacing": "error",
+        "keyword-spacing": "error",
+        "lines-between-class-members": "error",
+        "newline-per-chained-call": "off",
+        "no-dupe-keys": "error",
+        "no-else-return": "error",
+        "no-implicit-coercion": "error",
+        "no-invalid-this": "error",
+        "no-lonely-if": "error",
+        "no-multi-spaces": "error",
+        "no-return-await": "error",
+        "no-trailing-spaces": "error",
+        "no-useless-return": "error",
+        "no-unneeded-ternary": "error",
+        "prefer-arrow-callback": ["error"],
+        "prefer-const": "error"
       }
     },
     {
