feat(CI): added tests to CI

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "license": "MIT",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "build:back": "nx build server",
+    "build:front": "nx build front",
+    "build": "nx run-many --target=build --all",
     "dev:back": "nx serve server",
     "dev:front": "nx serve front",
-    "dev": "nx run-many --target=serve --projects=server,front",
-    "lint": "nx run-many --target=lint --all"
+    "dev": "nx run-many --target=serve --all",
+    "lint": "nx run-many --target=lint --all",
+    "test": "nx run-many --target=test --all"
   },
   "private": true,
   "dependencies": {
