--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,8 @@ jobs:
         timeout-minutes: 10
       - run: pnpm exec nx affected --target=lint --parallel --max-parallel=4
         timeout-minutes: 10
+      - run: pnpm exec nx affected --target=test --parallel --max-parallel=4
+        timeout-minutes: 10
       - run: pnpm exec nx-cloud stop-all-agents
   agents:
     runs-on: ubuntu-latest
