--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "jest": "27.5.1",
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
+    "sonar-scanner": "^3.1.0",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.5"
   },
