--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "cors": "^2.8.5",
     "date-fns": "2.28.0",
     "dotenv": "^16.0.0",
-    "dotenv-flow": "^3.2.0",
     "express": "4.17.2",
     "jsonwebtoken": "8.5.1",
     "react": "17.0.2",
@@ -51,7 +50,6 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/body-parser": "1.19.2",
     "@types/cors": "2.8.12",
-    "@types/dotenv-flow": "^3.2.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.0.2",
     "@types/jsonwebtoken": "8.5.8",
@@ -60,6 +58,7 @@
     "@types/react-big-calendar": "0.36.2",
     "@types/react-dom": "17.0.9",
     "@types/react-router-dom": "5.3.1",
+    "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "~5.12.1",
     "@typescript-eslint/parser": "~5.12.1",
     "babel-jest": "27.2.3",
@@ -77,6 +76,7 @@
     "prettier": "^2.5.1",
     "react-test-renderer": "17.0.2",
     "sonar-scanner": "^3.1.0",
+    "supertest": "6.2.2",
     "ts-jest": "27.1.3",
     "typescript": "~4.5.5"
   }
