test(front): tweak sonar

--- a/apps/front/sonar-project.properties
+++ b/apps/front/sonar-project.properties
@@ -7,5 +7,5 @@ sonar.projectName=Front
 sonar.javascript.lcov.reportPaths=../../coverage/apps/front/lcov.info
 sonar.sources=src
 sonar.test=src
-sonar.test.inclusions=**/*.spec.ts,**/*.e2e.ts,**/*.test.ts,**/*.mock.ts
+sonar.test.inclusions=**/*.spec.tsx,**/*.e2e.tsx,**/*.test.tsx
 sonar.verbose=false
